// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NombreInput muestra el error si existe 1`] = `
[
  <TextInput
    editable={true}
    onChangeText={[Function]}
    placeholder="Nombre del proyecto"
    style={
      {
        "backgroundColor": "#f9f9f9",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "fontSize": 16,
        "marginBottom": 12,
        "padding": 10,
      }
    }
    value=""
  />,
  <Text
    style={
      {
        "color": "red",
        "fontSize": 13,
        "marginBottom": 8,
      }
    }
  >
    Campo requerido
  </Text>,
]
`;

exports[`NombreInput se renderiza sin errores 1`] = `
<TextInput
  editable={true}
  onChangeText={[Function]}
  placeholder="Nombre del proyecto"
  style={
    {
      "backgroundColor": "#f9f9f9",
      "borderColor": "#ccc",
      "borderRadius": 8,
      "borderWidth": 1,
      "fontSize": 16,
      "marginBottom": 12,
      "padding": 10,
    }
  }
  value="Proyecto A"
/>
`;
